--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 11:05:21 2018</p>
+         Last Run: Thu Jul 26 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>2</td>
-                        <td>43</td>
+                        <td>1</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>8</td>
                         <td>N</td>
@@ -46,7 +46,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>6</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NE</td>
@@ -54,39 +54,39 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>6</td>
-                        <td>35</td>
+                        <td>Partly Cloudy</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>15</td>
+                        <td>36</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>19</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>6</td>
-                        <td>34</td>
+                        <td>15</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>16</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>4</td>
-                        <td>32</td>
+                        <td>Partly Cloudy</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>15</td>
+                        <td>33</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NE</td>
-                        <td>14</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,9 +134,9 @@
                "data":[
                  "22",
                  "23",
+                 "23",
                  "24",
-                 "24",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -147,9 +147,9 @@
                "data":[
                  "22",
                  "23",
+                 "23",
                  "24",
-                 "24",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "6",
-                 "6",
-                 "6",
-                 "4"
+                 "15",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "38",
+                 "44",
+                 "39",
+                 "36",
                  "35",
-                 "34",
-                 "32"
+                 "33"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "12",
                  "19",
-                 "19",
-                 "16",
-                 "14"
+                 "36",
+                 "34",
+                 "32"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 11:05:21 2018</p>
+         Last Run: Thu Jul 26 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>38</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NE</td>
@@ -281,13 +281,13 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>39</td>
-                        <td>49</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>NNE</td>
+                        <td>NE</td>
                         <td>50</td>
                      </tr>
                      <tr>
@@ -300,7 +300,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -308,7 +308,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>47</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNE</td>
@@ -358,7 +358,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "24",
-                 "23",
+                 "24",
                  "22",
                  "20"
                ]
@@ -370,7 +370,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "24",
-                 "23",
+                 "24",
                  "22",
                  "20"
                ]
@@ -435,10 +435,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
-                 "49",
+                 "45",
+                 "47",
                  "53",
-                 "61"
+                 "62"
                ]
              },
              {
@@ -448,7 +448,7 @@
                "data":[
                  "50",
                  "50",
-                 "56",
+                 "55",
                  "62"
                ]
              }
