--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 12:05:04 2018</p>
+         Last Run: Thu Jul 26 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>1</td>
-                        <td>44</td>
+                        <td>2</td>
+                        <td>43</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>N</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -46,47 +46,47 @@
                         <td>23</td>
                         <td>23</td>
                         <td>6</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NE</td>
-                        <td>19</td>
+                        <td>NNE</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>15</td>
+                        <td>7</td>
                         <td>36</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>36</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>15</td>
-                        <td>35</td>
+                        <td>7</td>
+                        <td>34</td>
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>34</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>15</td>
+                        <td>4</td>
                         <td>33</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NE</td>
-                        <td>32</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "2",
                  "6",
-                 "15",
-                 "15",
-                 "15"
+                 "7",
+                 "7",
+                 "4"
                ]
              },
              {
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "39",
+                 "43",
+                 "38",
                  "36",
-                 "35",
+                 "34",
                  "33"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "19",
-                 "36",
-                 "34",
-                 "32"
+                 "13",
+                 "21",
+                 "20",
+                 "17",
+                 "18"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 12:05:04 2018</p>
+         Last Run: Thu Jul 26 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -287,7 +287,7 @@
                         <td>47</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>50</td>
                      </tr>
                      <tr>
@@ -310,7 +310,7 @@
                         <td>47</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNE</td>
                         <td>62</td>
                      </tr>
