--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 13:05:04 2018</p>
+         Last Run: Thu Jul 26 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>2</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>N</td>
-                        <td>13</td>
+                        <td>NNW</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>23</td>
                         <td>23</td>
                         <td>6</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NNE</td>
+                        <td>NE</td>
                         <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>7</td>
                         <td>36</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -74,19 +74,19 @@
                         <td>7</td>
                         <td>10</td>
                         <td>ENE</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>33</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>NE</td>
-                        <td>18</td>
+                        <td>NNE</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,7 +134,7 @@
                "data":[
                  "22",
                  "23",
-                 "23",
+                 "24",
                  "24",
                  "24"
                ]
@@ -147,7 +147,7 @@
                "data":[
                  "22",
                  "23",
-                 "23",
+                 "24",
                  "24",
                  "24"
                ]
@@ -206,7 +206,7 @@
                  "6",
                  "7",
                  "7",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -214,8 +214,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "38",
+                 "44",
+                 "39",
                  "36",
                  "34",
                  "33"
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
+                 "14",
                  "21",
-                 "20",
-                 "17",
-                 "18"
+                 "19",
+                 "16",
+                 "16"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 13:05:04 2018</p>
+         Last Run: Thu Jul 26 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -271,48 +271,48 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>38</td>
-                        <td>45</td>
+                        <td>33</td>
+                        <td>46</td>
                         <td>2</td>
-                        <td>16</td>
-                        <td>NE</td>
-                        <td>50</td>
+                        <td>14</td>
+                        <td>ENE</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>39</td>
-                        <td>47</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>34</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>NNE</td>
-                        <td>50</td>
+                        <td>14</td>
+                        <td>NE</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>40</td>
-                        <td>53</td>
+                        <td>34</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>NNE</td>
-                        <td>55</td>
+                        <td>NE</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>47</td>
-                        <td>62</td>
+                        <td>44</td>
+                        <td>63</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>NNE</td>
-                        <td>62</td>
+                        <td>14</td>
+                        <td>NE</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -358,7 +358,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "24",
-                 "24",
+                 "23",
                  "22",
                  "20"
                ]
@@ -370,7 +370,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "24",
-                 "24",
+                 "23",
                  "22",
                  "20"
                ]
@@ -424,10 +424,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "38",
-                 "39",
-                 "40",
-                 "47"
+                 "33",
+                 "34",
+                 "34",
+                 "44"
                ]
              },
              {
@@ -435,10 +435,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
-                 "47",
-                 "53",
-                 "62"
+                 "46",
+                 "49",
+                 "54",
+                 "63"
                ]
              },
              {
@@ -446,10 +446,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "50",
-                 "55",
-                 "62"
+                 "37",
+                 "44",
+                 "53",
+                 "60"
                ]
              }
            ]
