--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 14:05:04 2018</p>
+         Last Run: Thu Jul 26 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -33,23 +33,23 @@
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>2</td>
+                        <td>0</td>
                         <td>44</td>
                         <td>4</td>
-                        <td>10</td>
-                        <td>NNW</td>
-                        <td>14</td>
+                        <td>8</td>
+                        <td>NW</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>39</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>21</td>
                      </tr>
                      <tr>
@@ -62,31 +62,31 @@
                         <td>6</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>7</td>
+                        <td>5</td>
                         <td>34</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>ENE</td>
                         <td>16</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>5</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>6</td>
                         <td>33</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>16</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -136,7 +136,7 @@
                  "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -149,7 +149,7 @@
                  "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "6",
+                 "0",
                  "7",
                  "7",
-                 "5"
+                 "5",
+                 "6"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
+                 "15",
                  "21",
-                 "19",
+                 "20",
                  "16",
-                 "16"
+                 "18"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 26 14:05:04 2018</p>
+         Last Run: Thu Jul 26 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>33</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ENE</td>
@@ -284,10 +284,10 @@
                         <td>23</td>
                         <td>23</td>
                         <td>34</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>NE</td>
+                        <td>ENE</td>
                         <td>44</td>
                      </tr>
                      <tr>
@@ -296,7 +296,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>34</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NE</td>
@@ -307,8 +307,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>44</td>
-                        <td>63</td>
+                        <td>45</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NE</td>
@@ -427,7 +427,7 @@
                  "33",
                  "34",
                  "34",
-                 "44"
+                 "45"
                ]
              },
              {
@@ -435,10 +435,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
-                 "49",
-                 "54",
-                 "63"
+                 "47",
+                 "50",
+                 "55",
+                 "64"
                ]
              },
              {
